--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -1,3 +1,119 @@
-/* 
-    General Styles
-*/
+
+
+.altHeader {
+  color: #EEEEEE;
+  font-weight: bolder;
+}
+
+.container-fluid {
+  padding: 0;
+  text-align: center;
+}
+
+.footer a {
+    color: black;
+    padding: 15px;
+    font-size: small;
+}
+
+h1   {
+    color: #66B9BF;
+    font-weight: bolder;
+}
+
+.ImgBtn {
+    position: absolute;
+    bottom: 1rem;
+    left: 57%;
+    width: fit-content;
+    height: fit-content;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    font-size: 2em;
+    border-radius: 50%;
+    background-color: transparent;
+    color: black;
+}
+
+#loggedButton, #loggedButton:focus, #loggedButton::after {
+    background-color: transparent;
+    border-color: transparent;
+    box-shadow: none;
+    color: #EEEEEE
+}
+#loggedButton:hover, .nav-link:hover {
+    color: rgb(214, 213, 213) !important;
+}
+
+.logo {
+    width: 130px;
+};
+
+.navbar-brand {
+    padding: 0;
+}
+
+.navContainer {
+    display: inline !important;
+    justify-content: center;
+}
+
+.navDropDn {
+  left: 87%;
+  border-color: transparent;
+}
+
+.navbar-toggler {
+    border: 3px black;
+}
+
+.nav-link {
+  color: #EEEEEE !important;
+  font-size: large;
+}
+
+.newCheckupToast {
+  top: 6rem;
+  left: 26rem;
+  z-index: 1;
+}
+
+.newPetToast {
+  bottom: 8rem;
+  left: 26rem;
+}
+
+.petBtn, .petBtn:focus {
+    background-color: #66b9bf !important;
+    border-color: #EEEEEE;
+    border-radius: 15px;
+    color: #EEEEEE;
+    box-shadow: none;
+}
+
+.petBtn:hover {
+  border-color: rgb(214, 213, 213);
+  color: #1D1F23;
+  opacity: 0.9;
+}
+
+.petCloudBar {
+    background-color: #66b9bf !important;
+}
+
+.recover {
+    max-width: 40rem;
+    text-align: center;
+}
+
+.registerToast {
+  top: 3rem;
+  left: 23rem;
+}
+
+.toast {
+  position: absolute;
+  width: fit-content;
+}
